feat: Added router to get qrCode
